# Autogame

./: .gitignore  CMakeLists.txt
AutOGame-GUI/: AutOGame-GUI.pro  autogame.cpp  autogame.h  autogame.ui  loading.cpp  loading.ui  main.cpp  resources.qrc  updatethread.h  worker.cpp  worker.h
AutOGame-GUI/android/: AndroidManifest.xml
dep/: CMakeLists.txt
dep/happyhttp/: CMakeLists.txt
dep/htmlcxx/: CMakeLists.txt
dep/htmlcxx/html/htmlcxx/: Node.cc  Node.h  tests.cc
dep/libtidy/: CMakeLists.txt
dep/restclient-cpp/: CMakeLists.txt
dep/restclient-cpp/include/restclient-cpp/: restclient.h
dep/restclient-cpp/source/: restclient.cpp
dep/tinyxml2/: CMakeLists.txt
include/: Autogame.hpp  Common.hpp
src/: CMakeLists.txt
src/Buildings/: Building.hpp  Buildings.cpp  Buildings.hpp
src/Common/: Common.hpp
src/Init/: Autogame.cpp  Autogame.h  Autogame.hpp
src/Internal/: Internal.cpp  Internal.hpp
src/Process/: Process.cpp
src/Update/: Update.cpp
src/Utils/: Utils.cpp  Utils.hpp
test/: CMakeLists.txt  Test.cpp
